# slog-telegraf

./: .codecov.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md
benches/: bench_logging.rs
src/: drain.rs  error.rs  lib.rs  ser.rs  telegraf.rs
