[package]
name = "slog-telegraf"
version = "0.2.1"
authors = ["Johannes Willbold <johannes.willbold@gmail.de>"]
edition = "2018"
readme = "README.md"
repository  = "https://github.com/jwillbold/slog-telegraf"
keywords = ["logging", "slog-rs", "telegraf", "influxdb"]
categories = ["database"]
license = "MIT"
description = "Telegraf drain for slog-rs"

[badges]
travis-ci = { repository = "jwillbold/slog-telegraf", branch = "master" }
codecov = { repository = "jwillbold/slog-telegraf", branch = "master", service = "github" }

[dependencies]
slog = "2.5"
url = "~2.1.1"

[dev-dependencies]
slog-async = "2.5"
criterion = "0.3"

[[bench]]
name = "bench_logging"
harness = false
